@@ -1,5 +1,12 @@
 2019-06-16  Zalan Bujtas  <zalan@apple.com>
 
+        Address Sam's post-landing review of r246234.
+
+        * layout/inlineformatting/InlineFormattingContextLineLayout.cpp:
+        (WebCore::Layout::InlineFormattingContext::LineLayout::createDisplayRuns const):
+
+2019-06-16  Zalan Bujtas  <zalan@apple.com>
+
         [LFC][IFC] Decouple baseline ascent/descent and baseline offset.
         https://bugs.webkit.org/show_bug.cgi?id=198901
         <rdar://problem/51782393>
